--- a/home.html
+++ b/home.html
@@ -49,8 +49,8 @@
             </div>
                 
             <div class="box">
-                <h2>Algoritmo de generación de línea de Bresenham</h2>
-                <img class="boximg" src="img/Bresenham.svg.png" alt="">
+                <h2>Algoritmo de generación de circunferencia de Bresenham</h2>
+                <img src="img/Linea_Ideal.png" alt="" width="210" height="150">
                 <a href="lineaBresenham.html"><button class="btn">Ver más <svg  xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" ><path d="M647-440H160v-80h487L423-744l57-56 320 320-320 320-57-56 224-224Z"/></svg></button></a>
             </div>
 
