Cambios a las imagenes, implementacion de footer y cambios a las cajas de contenido

--- a/home.html
+++ b/home.html
@@ -44,23 +44,37 @@
         <div class="container">
             <div class="box">
                 <h2>Algoritmo de generación de línea de Bresenham</h2>
-                <img class="boximg" src="img/Bresenham.svg.png" alt="">
-                <a href="lineaBresenham.html"><button class="btn">Ver más <svg  xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" ><path d="M647-440H160v-80h487L423-744l57-56 320 320-320 320-57-56 224-224Z"/></svg></button></a>
+                <img class="boximgsquare" src="img/Bresenham.svg.png" alt="">
+                <div class="btncont">
+                    <a href="lineaBresenham.html"><button class="btn">Ver más <svg  xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" ><path d="M647-440H160v-80h487L423-744l57-56 320 320-320 320-57-56 224-224Z"/></svg></button></a>
+                </div>
             </div>
                 
             <div class="box">
                 <h2>Algoritmo de generación de circunferencia de Bresenham</h2>
-                <img src="img/Linea_Ideal.png" alt="" width="210" height="150">
-                <a href="lineaBresenham.html"><button class="btn">Ver más <svg  xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" ><path d="M647-440H160v-80h487L423-744l57-56 320 320-320 320-57-56 224-224Z"/></svg></button></a>
+                <img class="boximgsquare" src="img/Linea_Ideal.png" alt=""">
+                <div class="btncont">
+                    <a href="lineaBresenham.html"><button class="btn">Ver más <svg  xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" ><path d="M647-440H160v-80h487L423-744l57-56 320 320-320 320-57-56 224-224Z"/></svg></button></a>
+                </div>
             </div>
 
             <div class="box">
                 <h2>Algoritmo del punto medio para circunferencias</h2>
                 <img class="boximgsquare" src="img/Bresenham_circle.svg.png" alt="">
-                <a href="lineaBresenham.html"><button class="btn">Ver más <svg  xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" ><path d="M647-440H160v-80h487L423-744l57-56 320 320-320 320-57-56 224-224Z"/></svg></button></a>
+                <div class="btncont">
+                    <a href="lineaBresenham.html"><button class="btn">Ver más <svg  xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" ><path d="M647-440H160v-80h487L423-744l57-56 320 320-320 320-57-56 224-224Z"/></svg></button></a>
+                </div>
             </div>
         </div>
     </main>
+
+    <footer>
+        <img class="logo" src="img/ugma logo nor.png" alt="" width="40px" height="46px">
+        <p>Universidad Nororiental Privada Gran Mariscal de Ayacucho</p>
+        <p>Núcleo Guayana</p>
+        <p>Computación gráfica</p>
+        <p>Grupo 2</p>
+    </footer>
 </body>
 
 </html>
