--- a/lineaBresenham.html
+++ b/lineaBresenham.html
@@ -50,5 +50,13 @@
             </div>
         </div>
     </main>
+
+    <footer>
+        <img class="logo" src="img/ugma logo nor.png" alt="" width="40px" height="46px">
+        <p>Universidad Nororiental Privada Gran Mariscal de Ayacucho</p>
+        <p>Núcleo Guayana</p>
+        <p>Computación gráfica</p>
+        <p>Grupo 2</p>
+    </footer>
 </body>
 </html>
