Agregadas las paginasa faltantes de contenido, navbar ordenado

--- a/home.html
+++ b/home.html
@@ -13,8 +13,8 @@
             <ul class="sidebar">
                 <li onclick=closeSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
                 <li><a href="lineaBresenham.html">Algoritmo Bresenham</a></li>
-                <li><a href="#">Punto medio</a></li>
-                <li><a href="#">Circunferencia</a></li>
+                <li><a href="circunBresenham.html">Circunferencia</a></li>
+                <li><a href="puntoMedCircun.html">Punto medio</a></li>
             </ul>
         </nav>
         <nav>
@@ -22,8 +22,8 @@
                 <li class="logo"><a href="home.html"><img src="img/ugma logo blan.png" alt="" width="40px" height=" 46px"></a></li>
                 <li class="hideOnMobile"><a href="home.html">Inicio</a></li>
                 <li class="hideOnMobile"><a href="lineaBresenham.html">Algoritmo Bresenham</a></li>
-                <li class="hideOnMobile"><a href="#">Punto medio</a></li>
-                <li class="hideOnMobile"><a href="#">Circunferencia</a></li>
+                <li class="hideOnMobile"><a href="circunBresenham.html">Circunferencia</a></li>
+                <li class="hideOnMobile"><a href="puntoMedCircun.html">Punto medio</a></li>
                 <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
             </ul>
         </nav>
@@ -54,7 +54,7 @@
                 <h2>Algoritmo de generación de circunferencia de Bresenham</h2>
                 <img class="boximgsquare" src="img/Linea_Ideal.png" alt=""">
                 <div class="btncont">
-                    <a href="lineaBresenham.html"><button class="btn">Ver más <svg  xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" ><path d="M647-440H160v-80h487L423-744l57-56 320 320-320 320-57-56 224-224Z"/></svg></button></a>
+                    <a href="circunBresenham.html"><button class="btn">Ver más <svg  xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" ><path d="M647-440H160v-80h487L423-744l57-56 320 320-320 320-57-56 224-224Z"/></svg></button></a>
                 </div>
             </div>
 
@@ -62,7 +62,7 @@
                 <h2>Algoritmo del punto medio para circunferencias</h2>
                 <img class="boximgsquare" src="img/Bresenham_circle.svg.png" alt="">
                 <div class="btncont">
-                    <a href="lineaBresenham.html"><button class="btn">Ver más <svg  xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" ><path d="M647-440H160v-80h487L423-744l57-56 320 320-320 320-57-56 224-224Z"/></svg></button></a>
+                    <a href="puntoMedCircun.html"><button class="btn">Ver más <svg  xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" ><path d="M647-440H160v-80h487L423-744l57-56 320 320-320 320-57-56 224-224Z"/></svg></button></a>
                 </div>
             </div>
         </div>
@@ -70,10 +70,12 @@
 
     <footer>
         <img class="logo" src="img/ugma logo nor.png" alt="" width="40px" height="46px">
-        <p>Universidad Nororiental Privada Gran Mariscal de Ayacucho</p>
-        <p>Núcleo Guayana</p>
-        <p>Computación gráfica</p>
-        <p>Grupo 2</p>
+        <p>
+            Universidad Nororiental Privada Gran Mariscal de Ayacucho<br>
+            Núcleo Guayana<br>
+            Computación gráfica<br>
+            Grupo 2
+        </p>
     </footer>
 </body>
 
