--- a/puntoMedCircun.html
+++ b/puntoMedCircun.html
@@ -43,7 +43,7 @@
     <main>
         <div class="blogcontainer">
             <div class="blognote">
-                <h1>Algoritmo de generación de línea de Bresenham</h1>
+                <h1>Algoritmo del punto medio para circunferencias</h1>
                 <h3>Definición:</h3>
                 <p>
                     El algoritmo de generación de línea de Bresenham es un método de
