--- a/home.html
+++ b/home.html
@@ -42,6 +42,41 @@
     </script>
 
     <main>
+        <div class="conceptos">
+            <div class="blogcontainer">
+                <div class="blognote">
+                    <h3>Linea</h3>
+                    <p>
+                        Una línea es una sucesión continua de puntos que se extiende de manera indefinida en ambas direcciones dentro de un plano, formando una trayectoria recta o curva. Es un concepto fundamental en la geometría que no tiene grosor ni ancho, solo longitud.
+
+                        Las líneas se representan mediante un trazo generalmente fino, y su extensión puede variar, por eso son empleadas para la creación de objetos geométricos más complejos.
+                    </p>
+                    <img src="img/LíneasIconología.png" alt="" width="400" height="600" style="margin: 0;">
+                    <h3>Circunferencia</h3>
+                    <p>La circunferencia es una curva plana y cerrada tal que todos sus puntos están a igual distancia del centro.
+
+                        Está definida por los infinitos puntos de un plano que distan de un punto fijo (centro) en una magnitud constante denominada radio. 
+                    </p>
+                    <img class="boximgsquare" src="img/KreisMittelpunktRadius.svg.png" alt="">
+                    <h3>Radio</h3>
+                    <p>
+                        Un radio es cualquier segmento que une el centro de la circunferencia con un punto cualquiera de la misma.
+                    </p>
+                    <h3>Diametro</h3>
+                    <p>
+                        Un diámetro es cualquier segmento que une dos puntos de la circunferencia pasando por su centro. El diámetro también es la longitud del segmento del mismo nombre.
+                    </p>
+                    <h3>Perimetro</h3>
+                    <p>
+                        El perímetro es el contorno de la circunferencia y su longitud.
+                    </p>
+                    <h3>Cuadrante:</h3> 
+                    <p>
+                        Cuarta parte de un círculo o una circunferencia comprendida entre dos radios que forman un ángulo de 90 grados.
+                    </p>
+                </div>
+            </div>
+        </div>
         <div class="container">
             <div class="box">
                 <h2>Algoritmo de generación de línea de Bresenham</h2>
